--- a/main.html
+++ b/main.html
@@ -10,14 +10,15 @@
 	<!-- the entire body must be written by student -->
 	<table border="1">
 		<thead>
-			<th>
-				<td>Part</td>
-			    <td>XS</td>
-			    <td>S</td>
-			    <td>M</td>    
-			    <td>L</td>
-			    <td>XL</td>
-			</th>
+		
+				
+				<th>Part</th>
+			    <th>XS</th>
+			    <th>S</th>
+			    <th>M</th>    
+			    <th>L</th>
+			    <th>XL</th>
+			
 		</thead>
 		<tbody>
 			<tr>
